tests/baselines/reference/reactNamespaceInvalidInput.errors.txt
error TS5059: Invalid value for '--reactNamespace'. 'my-React-Lib' is not a valid identifier.
reactNamespaceInvalidInput.tsx(1,1): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
reactNamespaceInvalidInput.tsx(1,2): error TS2874: This JSX tag requires 'my-React-Lib' to be in scope, but it could not be found.


!!! error TS5059: Invalid value for '--reactNamespace'. 'my-React-Lib' is not a valid identifier.
==== reactNamespaceInvalidInput.tsx (2 errors) ====
    <foo data/>;
    ~~~~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
     ~~~
!!! error TS2874: This JSX tag requires 'my-React-Lib' to be in scope, but it could not be found.
    